Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20501

QNetworkConfigurationManager::isOnline() fails on Windows

XMLWordPrintable

      On Windows desktop QNetworkConfigurationManager.isOnline() returns false most of the time, even if internet-connection is active, with wired or ethernet, or with Wifi.

      Only in my VirtualBox Windows XP isOnline return true.

      Tested with 2 windows XP sp3 PCs and one Windows 7 Starter netbook, + VirtualBox with Windows XP guest, linux host.

      isOnline() returns true as expected on Linux x86-64 (Kubuntu 10.10) and Mac OS X 10.6.6

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            shkearns Shane Kearns
            grego Harri Pasanen
            Votes:
            2 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes