Win32: assume always online

QNetworkConfigurationManager doesn't report correct value for isOnline().
See https://bugreports.qt-project.org/browse/QTBUG-20501